--- a/app/stylesheets/services.scss
+++ b/app/stylesheets/services.scss
@@ -1,3 +1,5 @@
+
+
 .lashes {
   margin-top: 5vh;
   margin-bottom: 5vh;
@@ -13,6 +15,9 @@
   .image-container {
     max-height: 200px;
     overflow: hidden;
+  }
+  .service-entry {
+    margin-bottom: 10px;
   }
   .text-container {
     h3 {
