--- a/app/views/base/catalogo.haml
+++ b/app/views/base/catalogo.haml
@@ -35,7 +35,11 @@
         .form-group
           %textarea.form-control{:placeholder => "Mensaje", :required => "true", :rows => "3"}
         %button.btn.send-button{:type => "submit"} Enviar
-  .col-xs-12.places-list
-    -@sedes.each do |s|
-      %a{ href: url(:base, :sede, s.id) }=s.name
+  .container
+    .col-xs-12.places-list
+      %h2
+        Visítanos
+      %i.fa.fa-map-marker{"aria-hidden" => "true"}
+      -@sedes.each do |s|
+        %a{ href: url(:base, :sede, s.id) }=s.name
   %img.footer-cinta{:src => "/img/forma.png"}/
