--- a/app/views/base/sede.haml
+++ b/app/views/base/sede.haml
@@ -48,5 +48,6 @@
         %i.fa.fa-map-marker{"aria-hidden" => "true"}
         =@sede.address
   .col-xs-12.map
-    %iframe.gmap{:allowfullscreen => "", :frameborder => "0", :height => "500", :src => "https://www.google.com/maps/embed/v1/place?key=AIzaSyDGAf4J1m4Oyy_XA-tZBDQunUq168oycJI&q=#{@sede.latitude},#{@sede.longitude}&zoom=18", :style => "border:0", :width => "100%"}
+    .gmap-container
+      %iframe.gmap{:allowfullscreen => "", :frameborder => "0", :height => "500", :src => "https://www.google.com/maps/embed/v1/place?key=AIzaSyDGAf4J1m4Oyy_XA-tZBDQunUq168oycJI&q=#{@sede.latitude},#{@sede.longitude}&zoom=18", :style => "border:0", :width => "100%"}
     %img.footer-cinta.place{:src => "/img/forma.png"}/
