--- a/app/stylesheets/sede.scss
+++ b/app/stylesheets/sede.scss
@@ -4,8 +4,8 @@ header.sede {
   height: 60vh;
   width: 100%;
   min-height: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
   background-position: center center !important ;
   color: white;
   .header-title-container {
@@ -115,6 +115,7 @@ header.catalogo {
     margin-bottom: 30px
   }
 }
+
 .address {
   font-size:25px;
   padding: 20px 10px;
