--- a/app/views/base/servicios.haml
+++ b/app/views/base/servicios.haml
@@ -1,11 +1,11 @@
-%header.sede{ style: "background: url('')" }
+%header.sede.service{ style: "background: url('/img/wallpaper-servicios.png')" }
   .container
     .row
       .row.header-title-container
         .col-sm-4.header-title-container-body
           %h4.text-left
             Pestañas & Cejas
-  %img.footer-cinta.place{:src => "/img/cinta.png"}/
+  -# %img.footer-cinta.place{:src => "/img/cinta.png"}/
 .lashes
   .container
     .row
@@ -13,7 +13,7 @@
         Pestañas
       .row.services-content
         -@service_pestanas.each do |p|
-          .col-xs-12.col-sm-12.col-md-6
+          .col-xs-12.col-sm-12.col-md-6.service-entry
             .col-xs-4.image-container
               %img.img-responsive{:src => "#{p.service_picture_url}", :alt => ""}/
             .col-xs-8.text-container
@@ -53,7 +53,11 @@
         .form-group
           %textarea.form-control{:placeholder => "Mensaje", :required => "true", :rows => "3"}
         %button.btn.send-button{:type => "submit"} Enviar
-  .col-xs-12.places-list
-    -@sedes.each do |s|
-      %a{ href: url(:base, :sede, s.id) }=s.name
+  .container
+    .col-xs-12.places-list
+      %h2
+        Visítanos
+      %i.fa.fa-map-marker{"aria-hidden" => "true"}
+      -@sedes.each do |s|
+        %a{ href: url(:base, :sede, s.id) }=s.name
   %img.footer-cinta{:src => "/img/forma.png"}/
