--- a/app/stylesheets/sede.scss
+++ b/app/stylesheets/sede.scss
@@ -119,8 +119,10 @@ header.catalogo {
 .address {
   font-size:25px;
   padding: 20px 10px;
+  margin-bottom: 30px;
   i {
     margin-right: 15px;
     color: #a8276f;
   }
+
 }
