--- a/admin/views/specials/_form.haml
+++ b/admin/views/specials/_form.haml
@@ -2,11 +2,11 @@
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label :title, :class => 'control-label'
   .controls
-    =f.text_field :title, :class => 'form-control input-large input-with-feedback', :autofocus => true
+    =f.text_field :title,:caption => "Titulo:", :class => 'form-control input-large input-with-feedback', :autofocus => true
     %span.help-inline=error ? f.error_message_on(:title, :class => 'text-error') : pat(:example)
 - error = @special.errors.include?(:body)
 %fieldset.control-group{:class => error ? 'has-error' : ''}
-  =f.label :body, :class => 'control-label'
+  =f.label :body,:caption => "Detalles:", :class => 'control-label'
   .controls
     =f.text_field :body, :class => 'form-control input-large input-with-feedback'
     %span.help-inline=error ? f.error_message_on(:body, :class => 'text-error') : pat(:example)
@@ -14,10 +14,11 @@
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label :expiration, :class => 'control-label'
   .controls
-    =f.text_field :expiration, :class => 'form-control input-large input-with-feedback'
-    %span.help-inline=error ? f.error_message_on(:expiration, :class => 'text-error') : pat(:example)
+    .input-group.date{"data-provide" => "datepicker"}
+      =f.date_field :expiration, :class => 'form-control input-large input-with-feedback datepicker'
+      %span.help-inline=error ? f.error_message_on(:expiration, :class => 'text-error') : pat(:example)
 %fieldset.control-group{:class => error ? 'has-error' : ''}
-  =f.label :picture, :class => 'control-label'
+  =f.label :picture, :caption => "Imagen:",:class => 'control-label'
   .controls
     =f.file_field :picture, :class => 'form-control input-large input-with-feedback'
     %span.help-inline=error ? f.error_message_on(:picture, :class => 'text-error') : pat(:example)
