--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -30,7 +30,7 @@
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           .col-sm-2.logo
             %a{:href => "/"}
-              %img.img-responsive{:src => "/img/logo-aquiub-white.png"}/
+              %img.img-responsive{:src => "/img/logo.png"}/
           %ul.nav.navbar-nav.navbar-right
             %li
               %a.page-scroll{:href => "/"} Aquiub
