--- a/public/stylesheets/sede.css
+++ b/public/stylesheets/sede.css
@@ -98,7 +98,8 @@ header.catalogo {
 
 .address {
   font-size: 25px;
-  padding: 20px 10px; }
+  padding: 20px 10px;
+  margin-bottom: 30px; }
   .address i {
     margin-right: 15px;
     color: #a8276f; }
