--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -155,20 +155,22 @@ section h2 {
   font-size: 50px; }
 
 section.about {
+  height: 60vh;
   width: 100vw;
   padding: 0 0;
   position: relative;
-  height: 50vh;
   min-height: auto;
   z-index: 100; }
   @media (max-width: 1000px) {
-    section.about .img-about {
-      display: none; } }
+    section.about {
+      height: 100% !important; }
+      section.about .img-about {
+        display: none; } }
   section.about .img-about {
     position: absolute;
     right: -100px;
     top: -50px;
-    height: 55vh;
+    height: 70vh;
     min-height: 300px;
     z-index: 10; }
     section.about .img-about img {
