--- a/app/views/base/catalogo.haml
+++ b/app/views/base/catalogo.haml
@@ -12,7 +12,7 @@
     Catálogo de Productos
   .table-container
     - Product.all.each do |p|
-      .entry.col-sm-3
+      .entry.col-sm-6.col-xs-12.col-md-3
         .image-container{ style: "background-image: url(#{p.product_picture_url})" }
         .name
           = p.name
