--- a/app/views/base/sede.haml
+++ b/app/views/base/sede.haml
@@ -11,7 +11,7 @@
 .row.sede-container
   .container
     .service-type-box.col-xs-12.col-sm-6
-      .service-type-picture{ style: "background-image: url(#{@service_pestanas.last.service_picture_url})" }
+      .service-type-picture{ style: "background-image: url('/img/foto-pestanas.jpg')" }
       .service-type-name
         Pestañas
       .service-list-title
@@ -20,7 +20,7 @@
         .service-entry
           = s.name
     .service-type-box.col-xs-12.col-sm-6
-      .service-type-picture{ style: "background-image: url(#{@service_cejas.last.service_picture_url})" }
+      .service-type-picture{ style: "background-image: url('/img/foto-cejas.jpg')" }
       .service-type-name
         Cejas
       .service-list-title
