add social media links

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -41,6 +41,12 @@
                 %a.page-scroll{:href => "#gallery"} Galeria
               %li
                 %a.page-scroll{:href => "#contact"} Contacto
+              %li
+                %a.social_media{:href => "https://www.instagram.com/aquiublashes/"}
+                  %i.fa.fa-instagram{"aria-hidden" => "true"}
+                %a.social_media{:href => "https://www.facebook.com/Aquiublashes/?fref=ts"}
+                  %i.fa.fa-facebook{"aria-hidden" => "true"}
+
     .base-container{role: 'main'}
       = yield
     / Latest compiled and minified JavaScript
