--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -8,6 +8,9 @@ body {
     height: 100%;
     width: 100%;
 }
+.social_media {
+    display: inline-block !important
+    }
 nav {
   background-color: transparent !important;
 }
