--- a/public/stylesheets/services.css
+++ b/public/stylesheets/services.css
@@ -12,7 +12,8 @@
     max-height: 200px;
     overflow: hidden; }
   .services-content .service-entry {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    min-height: 220px; }
   .services-content .text-container h3 {
     color: #b22f7b;
     text-transform: capitalize;
